# pastiche

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yml  pyproject.toml
data/: jumble_answers_data.json  jumble_data.json  pastiche.db
jumble_scraper/: scrapy.cfg
jumble_scraper/jumble_scraper/: items.py  middlewares.py  pipelines.py  settings.py
jumble_scraper/jumble_scraper/spiders/: jumble_spider.py
notebooks/: kitchen.ipynb
pastiche/: config.py  crud.py  database.py  game.py  gen.py  main.py  messages.py  tables.py
pastiche/game/: models.py
scripts/: deploy.sh  entrypoint.sh
static/: home_scripts.js  home_styles.css  scripts.js  styles.css
templates/: home.html  index.html
