[tool.poetry]
name = "pastiche"
version = "0.1.0"
description = "Package to create a game like \"Jumble Daily\""
authors = ["Badr Ben m'barek <badr.benb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.31.0"
scrapy = "^2.11.0"
pandas = "^2.1.2"
pydantic = "^2.4.2"
tqdm = "^4.66.1"
sqlalchemy = "^2.0.23"
fastapi = "^0.104.1"
jinja2 = "^3.1.2"
uvicorn = "^0.24.0.post1"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
